<resources>
    <string name="app_name">Fisio App</string>
    <string name="login">LOGIN</string>
    <string name="password">Senha</string>
    <string name="esqueci_a_senha">Esqueci a senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="username">Username</string>
    <string name="n_o_possui_uma_conta_cadastre_aqui">Não possui uma conta?\nCadastre aqui.</string>
    <string name="user_invalid">Usuário inválido</string>
    <string name="password_invalid">Senha inválida</string>
    <string name="sessao_expirada">Sessão expirada</string>
    <string name="msg_sessao_expirada">Sua sessão expirou.\nVocê será redirecionado para a tela de autenticação, onde poderá informar sua senha e voltar a utilizar o aplicativo.</string>
    <string name="search_text">Buscar por nome</string>
    <string name="adicionar">Adicionar cliente</string>
    <string name="treinos">Treinos</string>
    <string name="client">Clientes</string>
    <string name="apresentation">Olá, %1$s .\nDeseja adicionar \nalgum cliente novo? </string>
    <string name="empty_treinos">Você ainda não registrou nenhum treino.</string>
    <string name="empty_clients">Você ainda não possui nenhum cliente</string>
    <string name="reload">Recarregar</string>
    <string name="title_home_admin">Administradora</string>
    <string name="total_itens">(%1$s)</string>
    <string name="save">Salvar</string>
    <string name="possui_conta">Já possui uma conta?\nLogin aqui</string>
    <string name="dados">Dados Pessoais</string>
    <string name="name">Nome</string>
    <string name="confirm_password">Confirmação de senha</string>
    <string name="adicionar_treino">Adicionar treino</string>
    <string name="data_nascimento">Data de nascimento</string>
    <string name="job">Profissão</string>
    <string name="phone_number">Número de telefone</string>
    <string name="next">Próximo</string>
    <string name="back">Anterior</string>
    <string name="progresso_cadastro">Progresso cadastro</string>
    <string name="diagnostico_clinico">Diagnóstico Clínico</string>
    <string name="register_step_two">Diagnóstico clínico por diagnóstico fisoterapêutico</string>
    <string name="diagnostico_fisioterapeutico">Diagnóstico Fisioterapeutico</string>
    <string name="novo">Novo</string>
    <string name="exemplo_a16_1">Exemplo: A16.1</string>
    <string name="mais_um">+ 1</string>
    <string name="nova_conduta">Adicionar conduta</string>
    <string name="nova_conduta_aqui">Digite sua nova conduta</string>
    <string name="novo_objetivo">Nome objetivo</string>
    <string name="register_step_three">Objetivos e suas \ncondutas iniciais</string>

    <string-array name="colors">
        <item>#9849e5</item>
        <item>#f36969</item>
        <item>#4B2C6B</item>
        <item>#944545</item>
        <item>#9C27B0</item>
        <item>#F3D52222</item>
    </string-array>
    <string name="title_activity_admin_sessions">AdminSessionsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="adicionar_objetivo">Adicionar objetivo</string>
    <string name="nova_sessao">Nova sessão</string>
    <string name="conduta">Conduta</string>
    <string name="register_session">Deseja realizar alguma \nsessão com %1$s?</string>
    <string name="edit_conduta">Editar conduta</string>
    <string name="sem_observacao">Sem observação</string>
    <string name="sessoes_anteriores">Sessões anteriores</string>
    <string name="avaliacao">Avaliação %1$s</string>
    <string name="sessoes_entre">Sessões realizadas entre o  dia %1$s até %1$s</string>
    <string name="_01">01</string>
    <string name="avaliacao_sessao">Qual avaliação você da para esta sessão?</string>
    <string name="_02">02</string>
    <string name="_03">03</string>
    <string name="_04">04</string>
    <string name="_05">05</string>
    <string name="observacao_sessao">Deseja adicionar alguma observação para a sessão?</string>
    <string name="opcional">Opcional</string>
    <string name="gravar_nconduta">Gravar\nConduta</string>

</resources>
