<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/top_corners_white"
            android:padding="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_observacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/observacao_sessao"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="@font/museo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/card_observacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:elevation="5dp"
                app:cardCornerRadius="2dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="7dp"
                app:layout_constraintTop_toBottomOf="@+id/label_observacao">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_observacao"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/shape_button_line_init"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:hint="@string/opcional"
                        android:minLines="5"
                        android:padding="7dp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/colorLetter"
                        android:textSize="19sp" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/avaliacao_sessao"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="@font/museo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_observacao" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_avaliation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:elevation="5dp"
                app:cardCornerRadius="2dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="7dp"
                app:layout_constraintTop_toBottomOf="@+id/label">

                <RadioGroup
                    android:id="@+id/group_nota"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_checked_nota"
                        android:button="@null"
                        android:fontFamily="@font/museo900_regular"
                        android:gravity="center"
                        android:padding="7dp"
                        android:text="@string/_01"
                        android:textSize="28sp" />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_checked_nota"
                        android:button="@null"
                        android:fontFamily="@font/museo900_regular"
                        android:gravity="center"
                        android:padding="7dp"
                        android:text="@string/_02"
                        android:textSize="28sp" />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_checked_nota"
                        android:button="@null"
                        android:fontFamily="@font/museo900_regular"
                        android:gravity="center"
                        android:padding="7dp"
                        android:text="@string/_03"
                        android:textSize="28sp" />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_checked_nota"
                        android:button="@null"
                        android:fontFamily="@font/museo900_regular"
                        android:gravity="center"
                        android:padding="7dp"
                        android:text="@string/_04"
                        android:textSize="28sp"
                        tools:checked="true" />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/selector_checked_nota"
                        android:button="@null"
                        android:fontFamily="@font/museo900_regular"
                        android:gravity="center"
                        android:padding="7dp"
                        android:text="@string/_05"
                        android:textSize="28sp" />
                </RadioGroup>


            </androidx.cardview.widget.CardView>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="22dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/button_gradient"
                android:clickable="true"
                android:drawablePadding="15dp"
                android:focusable="true"
                android:foreground="@drawable/ripple_final"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_avaliation"
                tools:ignore="UnusedAttribute"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
        android:layout_width="60dp"
        android:layout_height="3dp"
        android:layout_marginBottom="4dp"
        android:background="#A8A8A8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>