<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_objective"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="22dp"
                android:background="@null"
                android:ellipsize="end"
                android:fontFamily="@font/museo900_regular"
                android:gravity="center"
                android:minHeight="50dp"
                android:padding="7dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/conduta"
                android:textColor="@color/colorLetterDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_conduta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="22dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="22dp"
                android:background="@drawable/shape_button_line_init"
                android:ellipsize="end"
                android:enabled="false"
                android:focusable="false"
                android:gravity="start"
                android:hint="@string/nova_conduta_aqui"
                android:minLines="5"
                android:padding="7dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textAlignment="textStart"
                android:textColor="@color/colorLetter"
                android:textSize="19sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tv_see_sessions"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/sessoes_anteriores"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_edit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/edit_conduta"
                    android:textSize="12sp" />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>