<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="25dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="25dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/museo"
            android:text="@string/login"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_username"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="18dp"
            android:hint="@string/username"
            app:layout_constraintTop_toBottomOf="@+id/text_login">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_password"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="18dp"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/layout_input_username"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_error"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:textColor="@color/design_default_color_error"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="Erro ao logar" />


        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_login"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape_button_circle_gradient"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/login"
            android:textColor="@color/white"
            app:initialCornerAngle="45dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_input_password"
            app:spinning_bar_color="@color/white" />

        <TextView
            android:id="@+id/tv_login"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:gravity="center"
            android:visibility="gone"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/n_o_possui_uma_conta_cadastre_aqui"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
