<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <br.com.fisioapp.ui.components.GradientChart
        android:id="@+id/gradient_chart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_final"
        app:isBezier="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_teste"
        app:minusColorEnd="@color/white"
        app:minusColorStart="@color/colorPrimary"
        app:plusColorEnd="@color/white"
        app:plusColorStart="@color/white"
        app:weight="-335dp"
        app:zoom="3"
        tools:ignore="UnusedAttribute"
        tools:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_teste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_primary"
        app:cardBackgroundColor="@color/background_gradient_final"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_apresentation_user">

        <TextView
            android:id="@+id/tv_example"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/gravar_nconduta"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_apresentation_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/museo900_regular"
        android:padding="14dp"
        android:text="@string/register_session"
        android:textColor="@color/colorLetterDark"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Deseja realizar alguma \nsessão João?" />


    <br.com.fisioapp.ui.components.WrapContentViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_new_session"
        tools:background="@color/colorPrimary"
        tools:listitem="@layout/item_register_sessao" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_new_session"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_gradient"
        android:clickable="true"
        android:drawablePadding="15dp"
        android:focusable="true"
        android:foreground="@drawable/ripple_final"
        android:text="@string/nova_sessao"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="UnusedAttribute"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>